==> zhanglei0/key_board_code/键盘透传/USB接口芯片CH374所有应用源码/USB接口芯片CH374所有应用源码/USB接口芯片CH374所有应用源码/CH374_code/CH374LIB/AVR/LIBD/EXAM6/CH374HFT.c <==
#include <string.h>
#include <stdio.h>
#define		F_CPU	16000000		/* 单片机主频为16MHz,用于延时子程序 */
#include <util/delay.h>
#include <avr/io.h>
#define LIB_CFG_INT_EN			0		/* CH374的INT#引脚连接方式,0为"查询方式",1为"中断方式" */
#define CH374_INT_WIRE			( PINB & 0x10 )	/* PINB.4, CH374的中断线INT#引脚,连接CH374的INT#引脚,用于查询中断状态 */
#define NO_DEFAULT_CH374_F_ENUM		1		/* 未调用CH374FileEnumer程序故禁止以节约代码 */
#define NO_DEFAULT_CH374_F_QUERY	1		/* 未调用CH374FileQuery程序故禁止以节约代码 */
#define NO_DEFAULT_CH374_RESET		1		/* 未调用CH374Reset程序故禁止以节约代码 */
#include "..\CH374HFD.H"

void CH374_PORT_INIT( )  /* 由于使用通用I/O模拟并口读写时序,所以进行初始化 */
{
	DDRA = 0x00;  /* 设置8位并口为输入 */
	PORTB = 0x07;  /* 设置CS,WR,RD默认为高电平 */
	DDRB = 0x0F;  /* 设置CS,WR,RD,A0为输出,设置INT#为输入 */
}

void Write374Index( UINT8 mCmd )		/* 向索引端口写入索引地址 */
{
/*	*(volatile unsigned char *)CH374_IDX_PORT_ADDR = mCmd;  通过并口直接读写CH374而非普通I/O模拟 */
	PORTB |= 0x08;  /* 输出A0=1 */
	PORTA = mCmd;  /* 向CH374的并口输出数据 */
	DDRA = 0xFF;  /* 并口D0-D7输出 */
	PORTB &= 0xF9;  /* 输出有效写控制信号, 写CH374芯片的命令端口, A0=1; CS=0; WR=0; RD=1; */
	DDRA = 0xFF;  /* 该操作无意义,仅作延时,CH374要求读写脉冲宽度大于100nS */
	PORTB |= 0x07;  /* 输出无效的控制信号, 完成操作CH374芯片, A0=1; CS=1; WR=1; RD=1; */
	DDRA = 0x00;  /* 禁止数据输出 */
	PORTB &= 0xF7;  /* 输出A0=0; 可选操作 */
}

void Write374Data( UINT8 mData )		/* 向数据端口写入数据,索引地址自动加1 */
{
/*	*(volatile unsigned char *)CH374_DAT_PORT_ADDR = mData;  通过并口直接读写CH374而非普通I/O模拟 */
	PORTA = mData;  /* 向CH374的并口输出数据 */
	DDRA = 0xFF;  /* 并口D0-D7输出 */
	PORTB &= 0xF1;  /* 输出有效写控制信号, 写CH374芯片的数据端口, A0=0; CS=0; WR=0; RD=1; */
	DDRA = 0xFF;  /* 该操作无意义,仅作延时,CH374要求读写脉冲宽度大于100nS */
	PORTB |= 0x07;  /* 输出无效的控制信号, 完成操作CH374芯片, A0=0; CS=1; WR=1; RD=1; */
	DDRA = 0x00;  /* 禁止数据输出 */
}

UINT8 Read374Data( void )			/* 从数据端口读出数据,索引地址自动加1 */
{
	UINT8	mData;
/*	mData = *(volatile unsigned char *)CH374_DAT_PORT_ADDR;  通过并口直接读写CH374而非普通I/O模拟 */
	DDRA = 0x00;  /* 数据输入 */
	PORTB &= 0xF2;  /* 输出有效读控制信号, 读CH374芯片的数据端口, A0=0; CS=0; WR=1; RD=0; */
	DDRA = 0x00;  /* 该操作无意义,仅作延时,CH374要求读写脉冲宽度大于100nS */
	mData = PINA;  /* 从CH374的并口PA输入数据 */
	PORTB |= 0x07;  /* 输出无效的控制信号, 完成操作CH374芯片, A0=0; CS=1; WR=1; RD=1; */
	return( mData );
}

void	mInitSTDIO( )
{
	UBRR0H = 0;
	UBRR0L = 103;  /* 9600bps@16MHz */
	UCSR0B = 0x18; /* BIT(RXEN) | BIT(TXEN); */
	UCSR0C = 0x06; /* BIT(UCSZ1) | BIT(UCSZ0); */
	stdout = stdin = &uart_str;
}
